{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 1633,
  "lineage": "31598216-a916-594c-4a5d-2159e50183a6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_IP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-8d5eb557",
            "domain": "vpc",
            "id": "eipalloc-0dac27d63f609000f",
            "network_interface": "eni-0de65eabadb8770cd",
            "private_dns": "ip-10-30-255-42.eu-west-3.compute.internal",
            "private_ip": "10.30.255.42",
            "public_dns": "ec2-52-47-60-150.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.60.150",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "QA",
              "Name": "NAT IP for NAT Gateway"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0e34b38a15ffd692b",
            "owner_id": "639716861848",
            "tags": {
              "Env": "QA",
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-00c1e98f2f4b8a389"
          },
          "depends_on": [
            "aws_vpc.stage_qa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dac27d63f609000f",
            "id": "nat-010e236c745a0d769",
            "network_interface_id": "eni-0de65eabadb8770cd",
            "private_ip": "10.30.255.42",
            "public_ip": "52.47.60.150",
            "subnet_id": "subnet-0f093dc84bb0c7f24",
            "tags": {
              "Env": "QA",
              "Name": "NAT Gateway"
            }
          },
          "depends_on": [
            "aws_eip.NAT_IP",
            "aws_subnet.NATSubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NATRT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06fa48511fcea4ed3",
            "owner_id": "639716861848",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-010e236c745a0d769",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "QA",
              "Name": "NAT RT Subnet"
            },
            "vpc_id": "vpc-00c1e98f2f4b8a389"
          },
          "depends_on": [
            "aws_nat_gateway.NATGW",
            "aws_vpc.stage_qa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07bccd73d4f98f56a",
            "owner_id": "639716861848",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e34b38a15ffd692b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "QA",
              "Name": "Public RT"
            },
            "vpc_id": "vpc-00c1e98f2f4b8a389"
          },
          "depends_on": [
            "aws_internet_gateway.IGW",
            "aws_vpc.stage_qa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "NATRTAssignA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa93e2d63e0f1b4b",
            "route_table_id": "rtb-06fa48511fcea4ed3",
            "subnet_id": "subnet-03bdddc5986396fe6"
          },
          "depends_on": [
            "aws_route_table.NATRT",
            "aws_subnet.PrivateSubnetA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "NATRTAssignB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d3f525a04ba8cfc",
            "route_table_id": "rtb-06fa48511fcea4ed3",
            "subnet_id": "subnet-04215367a32857acb"
          },
          "depends_on": [
            "aws_route_table.NATRT",
            "aws_subnet.PrivateSubnetB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "NATRTAssignC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01dbb74c3f46e6763",
            "route_table_id": "rtb-06fa48511fcea4ed3",
            "subnet_id": "subnet-0aa8e9565334848cb"
          },
          "depends_on": [
            "aws_route_table.NATRT",
            "aws_subnet.PrivateSubnetC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTAssignA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07979dc8c7f79d4b6",
            "route_table_id": "rtb-07bccd73d4f98f56a",
            "subnet_id": "subnet-0dca3bfd3d15339bb"
          },
          "depends_on": [
            "aws_route_table.PublicRT",
            "aws_subnet.PublicSubnetA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTAssignB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06adc5552c32318fc",
            "route_table_id": "rtb-07bccd73d4f98f56a",
            "subnet_id": "subnet-0af3f061d63a7240b"
          },
          "depends_on": [
            "aws_route_table.PublicRT",
            "aws_subnet.PublicSubnetB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTAssignC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0102e54f184674cdd",
            "route_table_id": "rtb-07bccd73d4f98f56a",
            "subnet_id": "subnet-058ad21e030a0bd1c"
          },
          "depends_on": [
            "aws_route_table.PublicRT",
            "aws_subnet.PublicSubnetC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ECSCluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:639716861848:security-group/sg-0036d44bc480b5e9c",
            "description": "SG for ECS Cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0036d44bc480b5e9c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG-ECS-cluster-qa-replica",
            "name_prefix": null,
            "owner_id": "639716861848",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow SSH Port"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c1e98f2f4b8a389"
          },
          "depends_on": [
            "aws_vpc.stage_qa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MongoSubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:639716861848:subnet/subnet-0ab4f831670f182d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.30.250.0/24",
            "id": "subnet-0ab4f831670f182d9",
            "map_public_ip_on_launch": false,
            "owner_id": "639716861848",
            "tags": {
              "Env": "QA",
              "Name": "Mongo Subnet"
            },
            "vpc_id": "vpc-00c1e98f2f4b8a389"
          },
          "depends_on": [
            "aws_vpc.stage_qa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "NATSubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:639716861848:subnet/subnet-0f093dc84bb0c7f24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.30.255.0/24",
            "id": "subnet-0f093dc84bb0c7f24",
            "map_public_ip_on_launch": false,
            "owner_id": "639716861848",
            "tags": {
              "Env": "QA",
              "Name": "NAT Subnet"
            },
            "vpc_id": "vpc-00c1e98f2f4b8a389"
          },
          "depends_on": [
            "aws_vpc.stage_qa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnetA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:639716861848:subnet/subnet-03bdddc5986396fe6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.30.10.0/24",
            "id": "subnet-03bdddc5986396fe6",
            "map_public_ip_on_launch": false,
            "owner_id": "639716861848",
            "tags": {
              "Env": "QA",
              "Name": "Private Subnet A"
            },
            "vpc_id": "vpc-00c1e98f2f4b8a389"
          },
          "depends_on": [
            "aws_nat_gateway.NATGW",
            "aws_vpc.stage_qa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnetB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:639716861848:subnet/subnet-04215367a32857acb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.30.11.0/24",
            "id": "subnet-04215367a32857acb",
            "map_public_ip_on_launch": false,
            "owner_id": "639716861848",
            "tags": {
              "Env": "QA",
              "Name": "Private Subnet B"
            },
            "vpc_id": "vpc-00c1e98f2f4b8a389"
          },
          "depends_on": [
            "aws_nat_gateway.NATGW",
            "aws_vpc.stage_qa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnetC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:639716861848:subnet/subnet-0aa8e9565334848cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.30.12.0/24",
            "id": "subnet-0aa8e9565334848cb",
            "map_public_ip_on_launch": false,
            "owner_id": "639716861848",
            "tags": {
              "Env": "QA",
              "Name": "Private Subnet C"
            },
            "vpc_id": "vpc-00c1e98f2f4b8a389"
          },
          "depends_on": [
            "aws_nat_gateway.NATGW",
            "aws_vpc.stage_qa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnetA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:639716861848:subnet/subnet-0dca3bfd3d15339bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.30.0.0/24",
            "id": "subnet-0dca3bfd3d15339bb",
            "map_public_ip_on_launch": false,
            "owner_id": "639716861848",
            "tags": {
              "Env": "QA",
              "Name": "Public Subnet A"
            },
            "vpc_id": "vpc-00c1e98f2f4b8a389"
          },
          "depends_on": [
            "aws_internet_gateway.IGW",
            "aws_vpc.stage_qa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnetB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:639716861848:subnet/subnet-0af3f061d63a7240b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.30.1.0/24",
            "id": "subnet-0af3f061d63a7240b",
            "map_public_ip_on_launch": false,
            "owner_id": "639716861848",
            "tags": {
              "Env": "QA",
              "Name": "Public Subnet B"
            },
            "vpc_id": "vpc-00c1e98f2f4b8a389"
          },
          "depends_on": [
            "aws_internet_gateway.IGW",
            "aws_vpc.stage_qa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnetC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:639716861848:subnet/subnet-058ad21e030a0bd1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.30.2.0/24",
            "id": "subnet-058ad21e030a0bd1c",
            "map_public_ip_on_launch": false,
            "owner_id": "639716861848",
            "tags": {
              "Env": "QA",
              "Name": "Public Subnet C"
            },
            "vpc_id": "vpc-00c1e98f2f4b8a389"
          },
          "depends_on": [
            "aws_internet_gateway.IGW",
            "aws_vpc.stage_qa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "stage_qa",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:639716861848:vpc/vpc-00c1e98f2f4b8a389",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-05b067fed9c233f6a",
            "default_route_table_id": "rtb-0c971c0f2d2921fb8",
            "default_security_group_id": "sg-00ee5a15adaeaaf02",
            "dhcp_options_id": "dopt-a653abcf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00c1e98f2f4b8a389",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c971c0f2d2921fb8",
            "owner_id": "639716861848",
            "tags": {
              "Env": "QA",
              "Name": "Stage QA VPC"
            }
          }
        }
      ]
    }
  ]
}